restack_client/src/styles/map-maker.scss
/* ... */
.mini-boards-container{
    height: 100%;
    width: 100%;
    display: flex;
    flex-flow: row wrap;
    align-content: center;
    justify-content: center;
    .mini-board{
        border: 1px solid black;
        position: relative;
    }
    .empty-planes-container, .empty-boards-container{
        display: flex;
        align-items: center;
        justify-content: center;
    }
    .plane-name{
        position: absolute;
        top: 0;
        left: 0;
        background-color: black;
        color: white;
        z-index: 1;
        border: 1px solid lightgrey;
    }
}

.lightblueOnHover:hover{
    background-color: lightblue !important;
    outline: none;
}
.compatibility-matrix-container{
    .adjacency-filter-header{
        color: black;
        width: 100%;
        display: inline-block;
        border-bottom: 1px solid lightseagreen;
        background-color: paleturquoise;
        cursor: pointer;
        &:hover{
            background-color: lightseagreen;
            color: black;
        }
    }
}


//  DUNGEON VIEW

.dungeon-info{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    padding: 0;
    height: 40px;
    width: 100%;
    flex: 0 0 40px;
    background-color: #111;
    .dungeon-name{
        position: relative;
        height: 100%;
        display: flex;
        align-items: center;
        padding: 0 10px;
        background-color: #111;
        .dungeon-validity-indicator{
            position: absolute;
            height: 8px;
            width: 8px;
            border-radius: 8px;
            top: calc(50% - 4px);
            left: 18px;
            &.valid{
                background-color: lightgreen;
            }
            &.invalid{
                background-color: red;
            }
        }
        select{
            padding-left: 22px;
        }
    }
    .level-buttons-container{
        display: flex;
        min-width: 300px;
        justify-content: space-around;
        margin: 0;
        padding: 0 12px;
        height: 100%;
        flex-direction: row;
        min-height: 100%;
        align-items: center;
        background-color: #111;
        border-left: 1px solid rgba(255,255,255,0.12);
        color: rgba(255,255,255,0.86);
        .icon-container{
            cursor: pointer;
            display: flex;
            align-items: center;
            &:hover{
                color: rgb(37, 192, 179);
            }
            .add-level-up-icon{
                margin-left: -4px;
                margin-top: -2px;
            }
            .add-level-down-icon{
                margin-left: -4px;
                margin-top: -3px;
            }
        }
        .double-icon-container{
            display: flex;
        }
    }
}

.dungeon-map-board{
    display: flex !important;
    flex-direction: column !important;
    flex-wrap: nowrap !important;
    align-content: stretch !important;
}
/* ... */

